Corrige bug de z-index de .header

--- a/src/app/sass/layout/_header.sass
+++ b/src/app/sass/layout/_header.sass
@@ -1,3 +1,7 @@
+.header-container
+    position: relative
+    z-index: $z-3
+
 .header
     // position: fixed
     // top: 0
